{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "NormalPlayer",
            "id": "82df7a11-2033-4e23-83fe-9bc0faa7c1eb",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "723870f1-9f2c-4e49-bda2-7cb1f321b52b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f296836-2ff5-4190-b6de-a9731c2e3f64",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PausePlayer",
            "id": "24cf885c-42be-4395-80b0-716243b861ae",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "3a1d1bb7-a8c6-4344-85e5-2afdc72b5376",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a645d55-6748-43d8-8d6f-cfb8f9edb9de",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4085bd2a-118c-4730-b78d-bc84de9e3e5f",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}